# opal-uefi-greeter

./: .gitignore  Cargo.toml  LICENSE  build-pba.sh  config-example  readme.md  rustfmt.toml
.cargo/: config
scripts/: lock.sh  nvme_device.sh  runner.sh  unvfio_nvme.sh  vfio_nvme.sh
src/: boot_services_ext.rs  config.rs  dp_to_text.rs  error.rs  main.rs  nvme_device.rs  nvme_passthru.rs  secure_device.rs  util.rs
src/opal/: command.rs  mod.rs  session.rs
